[package]
name = "onering"
version = "1.3.2"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "High throughput synchronous queue"
repository = "https://github.com/cenotelie/onering"
homepage = "https://github.com/cenotelie/onering"
documentation = "https://github.com/cenotelie/onering"
license = "MIT"
edition = "2024"

[features]
default = ["std"]
std = ["crossbeam-utils/std"]

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.5"
crossbeam = "0.8"
disruptor-rs = "0.1.1"

[[bench]]
name = "crossbeam"
harness = false
[[bench]]
name = "disruptor-rs"
harness = false
[[bench]]
name = "queue"
harness = false
